css/participede.css
body { font: normal 11px auto Arial, Verdana, Helvetica, sans-serif; margin: 0; background: #dceffe; }

a { color: #f6ae19; }

/* Tabela */

table{ font-size: 12px; color: #575757; width: 772px; margin-top: 15px; text-align: center; }
table .period{ font-size: 13px; color:#f89c01; font-weight:bold; text-align: center; }
table .category { width: 200px; font-weight: bold; background: #FFFFFF; border: 4px solid #dceffe; }
table td{ border: 4px solid #DCEFFE; padding: 10px 0px; background-color: #ffffff; }

caption {
  padding: 0 0 5px 0;
  width: 700px;   
  font: bold 20px Helvetica,"Trebuchet MS", Verdana, Arial, sans-serif;
  text-align: left;
  color:#7B7B7B;
}

form.formtastic fieldset ol li.string input {
  width: 60%
}

h2.head {display:none;}

#main dt  {float:left;width:200px;}
.participede .empty {background:none;border:0 none;}
.participede table {margin-bottom:20px;}

.subscribe_button { padding: 10px;}

